--- a/README
+++ b/README
@@ -1,2 +1,4 @@
-to add the DanoGameLab dependencies:
+bricker game
+
+need to add the DanoGameLab dependencies in order to play:
 file->project_structure->modules->dependencies->+->jar->add src and DanoGameLab.jar
